update README for plugin version of unchecked